force-app/main/default/objects/CollectionsAllocation__c/CollectionsAllocation__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT012619 - Created for phase1</description>
    <label>Collections Allocation</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Collections Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>