force-app/main/default/objects/CollectionsAllocation__c/fields/AdjustedAllocationFees__c.field-meta.xml
<CustomField>
    <fullName>AdjustedAllocationFees__c</fullName>
    <description>Used to calculate the extra allocation fees for the adjusted fees.</description>
    <label>Adjusted Allocation Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>