force-app/main/default/objects/CollectionsAllocation__c/fields/AllocationPercent__c.field-meta.xml
<CustomField>
    <fullName>AllocationPercent__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <formula>AmountAllocated__c / AmountfromPayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>