force-app/main/default/objects/CollectionsAllocation__c/fields/AllocationType__c.field-meta.xml
<CustomField>
    <fullName>AllocationType__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <label>Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Allocation</fullName>
                <default>true</default>
                <label>Payment Allocation</label>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>