force-app/main/default/objects/CollectionsAllocation__c/fields/AmountAllocated__c.field-meta.xml
<CustomField>
    <fullName>AmountAllocated__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <label>Amount Allocated from Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>