force-app/main/default/objects/CollectionsAllocation__c/fields/AmountfromPayment__c.field-meta.xml
<CustomField>
    <fullName>AmountfromPayment__c</fullName>
    <formula>Payment__r.pymt__Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount from Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>