force-app/main/default/objects/CollectionsAllocation__c/fields/AmountfromTransactionLine__c.field-meta.xml
<CustomField>
    <fullName>AmountfromTransactionLine__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <formula>TransactionLine__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount from Transaction Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>