force-app/main/default/objects/CollectionsAllocation__c/fields/BoardProgram__c.field-meta.xml
<CustomField>
    <fullName>BoardProgram__c</fullName>
    <description>PacPoint-IC071719- Created for Phase 2</description>
    <formula>TransactionLine__r.BoardProgram__c</formula>
    <label>Board/Program</label>
    <type>Text</type>
</CustomField>