force-app/main/default/objects/CollectionsAllocation__c/fields/CashierCode__c.field-meta.xml
<CustomField>
    <fullName>CashierCode__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <formula>TransactionLine__r.CashierCodeCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cashier Code</label>
    <type>Text</type>
</CustomField>