force-app/main/default/objects/CollectionsAllocation__c/fields/CreatedDayofWeek__c.field-meta.xml
<CustomField>
    <fullName>CreatedDayofWeek__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <formula>CASE( MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, 
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Day of Week</label>
    <type>Text</type>
</CustomField>