force-app/main/default/objects/CollectionsAllocation__c/fields/CreatedTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedTime__c</fullName>
    <description>PacPoint-FT022319 - Created for phase 1</description>
    <formula>TIMEVALUE(CreatedDate - 0.416666666667)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Time</label>
    <type>Time</type>
</CustomField>