force-app/main/default/objects/CollectionsAllocation__c/fields/CutOffBatchDate__c.field-meta.xml
<CustomField>
    <fullName>CutOffBatchDate__c</fullName>
    <description>PacPoint-PH030819 - Created for phase 1</description>
    <label>Close Date / Time</label>
    <type>DateTime</type>
</CustomField>