force-app/main/default/objects/CollectionsAllocation__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT030319 - Created for phase 1</description>
    <label>Deposit</label>
    <referenceTo>Deposits__c</referenceTo>
    <relationshipLabel>Collections Allocations</relationshipLabel>
    <relationshipName>Collections_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>