force-app/main/default/objects/CollectionsAllocation__c/fields/DepositAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositAmount__c</fullName>
    <formula>Deposit__r.DepositAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>