force-app/main/default/objects/CollectionsAllocation__c/fields/DepositDate__c.field-meta.xml
<CustomField>
    <fullName>DepositDate__c</fullName>
    <formula>Deposit__r.DepositDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Date</label>
    <type>Date</type>
</CustomField>