force-app/main/default/objects/CollectionsAllocation__c/fields/DepositPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>DepositPaymentDate__c</fullName>
    <formula>Deposit__r.EndDatetoPullPayments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Payment Date</label>
    <type>Date</type>
</CustomField>