force-app/main/default/objects/CollectionsAllocation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>