force-app/main/default/objects/CollectionsAllocation__c/fields/ExternalCollectionAllocationID__c.field-meta.xml
<CustomField>
    <fullName>ExternalCollectionAllocationID__c</fullName>
    <label>External Collection Allocation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>