force-app/main/default/objects/CollectionsAllocation__c/fields/FeeSchedule__c.field-meta.xml
<CustomField>
    <fullName>FeeSchedule__c</fullName>
    <formula>Payment__r.FeeSchedule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Schedule</label>
    <type>Text</type>
</CustomField>