force-app/main/default/objects/CollectionsAllocation__c/fields/JVProcessed__c.field-meta.xml
<CustomField>
    <fullName>JVProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for the JV form created by Pacific Point</description>
    <label>JV Processed</label>
    <type>Checkbox</type>
</CustomField>