force-app/main/default/objects/CollectionsAllocation__c/fields/NetCollectionsafterFeesAllocated__c.field-meta.xml
<CustomField>
    <fullName>NetCollectionsafterFeesAllocated__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <formula>IF( TrustAccount__c = TRUE, AmountAllocated__c, AmountAllocated__c - TotalFeesAllocated__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Collections after Fees Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>