force-app/main/default/objects/CollectionsAllocation__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <label>Payment</label>
    <referenceTo>pymt__PaymentX__c</referenceTo>
    <relationshipLabel>Collections Allocations</relationshipLabel>
    <relationshipName>Collections_Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>