force-app/main/default/objects/CollectionsAllocation__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <formula>TEXT(Payment__r.pymt__Payment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>