force-app/main/default/objects/CollectionsAllocation__c/fields/Posted_to_GL__c.field-meta.xml
<CustomField>
    <fullName>Posted_to_GL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <label>Posted to GL</label>
    <type>Checkbox</type>
</CustomField>