force-app/main/default/objects/CollectionsAllocation__c/fields/PreviousWeekDay__c.field-meta.xml
<CustomField>
    <fullName>PreviousWeekDay__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <formula>TODAY() - CASE( MOD( DateValue(CreatedDate) - DATE(1900,1,7) ,7) , 0, 2, 1, 3, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Week Day</label>
    <type>Date</type>
</CustomField>