force-app/main/default/objects/CollectionsAllocation__c/fields/Reconciliation_Batch__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-CZ103019 - Created for 4GOV phase 1</description>
    <label>Reconciliation Batch</label>
    <referenceTo>Reconciliation_Batch__c</referenceTo>
    <relationshipLabel>Collections Allocations</relationshipLabel>
    <relationshipName>Collections_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>