force-app/main/default/objects/CollectionsAllocation__c/fields/TotalFeesAllocated__c.field-meta.xml
<CustomField>
    <fullName>TotalFeesAllocated__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <formula>(Payment__r.PPIFeeAmount__c + Payment__r.HIGETaxAmount__c +  Payment__r.pymt__Transaction_Fee__c) * AllocationPercent__c + AdjustedAllocationFees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>