force-app/main/default/objects/CollectionsAllocation__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Collections Allocations</relationshipLabel>
    <relationshipName>Collections_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>