force-app/main/default/objects/CollectionsAllocation__c/fields/TransactionLine__c.field-meta.xml
<CustomField>
    <fullName>TransactionLine__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <label>Transaction Line</label>
    <referenceTo>TransactionLine__c</referenceTo>
    <relationshipLabel>Collections Allocations</relationshipLabel>
    <relationshipName>Collections_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>