force-app/main/default/objects/CollectionsAllocation__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <description>PacPoint-FT012619 - Created for phase 1</description>
    <formula>TEXT(Payment__r.pymt__Transaction_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>