force-app/main/default/objects/CollectionsAllocation__c/fields/TrustAccount__c.field-meta.xml
<CustomField>
    <fullName>TrustAccount__c</fullName>
    <description>PacPoint-FT021519 - Created for phase 1</description>
    <formula>TransactionLine__r.TrustAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This indicates if the Cashier Code is a Trust Account.</inlineHelpText>
    <label>Trust Account</label>
    <type>Checkbox</type>
</CustomField>