force-app/main/default/objects/CollectionsAllocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CutOffBatchDate__c</columns>
    <columns>Reconciliation_Batch__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>5/12/2022 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>